first end style of chapters preview

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,7 +188,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 11px;
+  width: 15px;
 }
 
 ::-webkit-scrollbar-track {
@@ -575,15 +575,45 @@ body {
 
 .tab-card {
   position: relative;
-  max-height: 60px;
+  height: 60px;
   background-color: var(--seashell);
+  border-radius: var(--radius-10);
+  box-shadow: var(--shadow-3);
+  display: grid;
+  place-content: center;
+  overflow: hidden;
+  cursor: pointer;
+  transition: var(--transition-1);
 }
 
+.tab-card .w-100 {
+  pointer-events: none;
+  opacity: 0;
+  transition: var(--transition-2);
+}
 
+.tab-card.active .w-100 {
+  opacity: 1;
+}
 
+.tab-card.active {
+  height: 50vh;
+  box-shadow: none;
 
+}
 
+.tab-text {
+  font-size: var(--fs-4);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50% -50%);
+}
 
+.tab-card.active .tab-text {
+  display: none;
+
+}
 
 
 
