--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,7 +393,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
+
 }
 
 
@@ -754,6 +754,41 @@ body {
 /*-----------------------------------*\
               #AUTHOR
 \*-----------------------------------*/
+
+.author {
+  background-color: var(--seashell);
+}
+
+.author .container {
+  display: grid;
+  gap: 40px;
+
+}
+
+.author-content {
+  background-color: var(--white);
+  padding: 30px;
+
+}
+
+.author:is(.section-subtitle, .section-subtitle) {
+  text-align: left;
+
+}
+
+.author-name {
+  font-size: var(--fs-7);
+  margin-block-end: 30px;
+
+}
+
+.author .section-text {
+  font-size: unset;
+
+}
+
+
+
 
 
 
