--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -777,7 +777,7 @@ body {
 }
 
 .author-name {
-  font-size: var(--fs-7);
+  font-size: var(--fs-700);
   margin-block-end: 30px;
 
 }
@@ -789,14 +789,38 @@ body {
 
 
 
-
-
-
-
-
 /*-----------------------------------*\
             #ACHIEVEMENT
 \*-----------------------------------*/
+
+.section.achievement {
+  background-color: var(--white);
+}
+
+.achievement-card {
+  background-color: var(--seashell);
+  box-shadow: var(--shadow-4);
+  overflow: hidden;
+  transition: var(--transition-2);
+}
+
+.achievement-card:is(:hover, :focus-within) {
+  transform: translateY(-10px);
+}
+
+.achievement-card .card-content {
+  position: relative;
+  padding: 15px;
+}
+
+.achievement-card .awr-img {
+  position: absolute;
+  top: 0;
+  right: -5px;
+  opacity: 0.3;
+}
+
+
 
 
 
