html code for contact us is done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -821,13 +821,8 @@ body {
 }
 
 
-
-
-
-
-
 /*-----------------------------------*\
-              #CONTACT
+              #FEEDBACK
 \*-----------------------------------*/
 
 
